--- a/src/components/Layout/LayoutComponents/SlidingMenu.module.css
+++ b/src/components/Layout/LayoutComponents/SlidingMenu.module.css
@@ -21,11 +21,11 @@
 .btn:hover {
   width: 29rem;
 }
-@media screen and (max-width: 830px) {
+/* @media screen and (max-width: 830px) {
   .btn:hover {
     width: 27rem;
   }
-}
+} */
 
 .icon {
   display: flex;
