--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -4,7 +4,6 @@
   top: 10vh;
   left: 10%;
   width: 80%;
-  height: 80vh;
   background-color: var(--dark-grey);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border: 2px solid var(--white);
@@ -20,7 +19,7 @@
   width: 100%;
   padding: 1rem 0.5rem;
   background: var(--green);
-  color: var(--black);
+  color: var(--dark-grey);
   text-transform: uppercase;
 }
 
