--- a/src/pages/ListSpaceCraftPage.module.css
+++ b/src/pages/ListSpaceCraftPage.module.css
@@ -20,6 +20,8 @@
 .action_container {
   display: flex;
   justify-content: flex-end;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .btn {
@@ -27,7 +29,6 @@
   padding: 0.8rem 1.5rem;
   cursor: pointer;
   border: 1px solid var(--green);
-  outline: 1px solid var(--green);
   border-radius: 30px;
   width: 150px;
   text-transform: capitalize;
@@ -39,7 +40,6 @@
 
 .btn:hover {
   background-color: var(--green);
-  outline: 1px solid var(--white);
   color: var(--white);
 }
 
